# codex-optimize

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
codex_branch_simple/: run.py
codopt/: _runtime_setup.py  cli.py  docker_ops.py  git_ops.py  models.py  orchestrator.py  state.py  ui.py  worker.py
codopt/_vendor/: __init__.py
example/inference_optimization/: README.md  codex_optimize_inference.txt
example/life/: Dockerfile  metric.json
example/life_result/: README.md  run.bundle
example/life_result/run/: events.jsonl  run_state.json  summary.json
example/life_result/run/git_diffs/: r1_pbaseline_0.diff  r1_pbaseline_1.diff  r2_pr1_pbaseline_0_0.diff  r2_pr1_pbaseline_0_1.diff  r2_pr1_pbaseline_1_0.diff  r2_pr1_pbaseline_1_1.diff  r3_pr2_pr1_pbaseline_0_1_0.diff  r3_pr2_pr1_pbaseline_0_1_1.diff  r3_pr2_pr1_pbaseline_1_0_0.diff  r3_pr2_pr1_pbaseline_1_0_1.diff
example/life_result/run/nodes/r1_pbaseline_0/: agent.jsonl  result.json
example/life_result/run/nodes/r1_pbaseline_1/: agent.jsonl  result.json
example/life_result/run/nodes/r2_pr1_pbaseline_0_0/: agent.jsonl  result.json
example/life_result/run/nodes/r2_pr1_pbaseline_0_1/: agent.jsonl  result.json
example/life_result/run/nodes/r2_pr1_pbaseline_1_0/: agent.jsonl  result.json
example/life_result/run/nodes/r2_pr1_pbaseline_1_1/: agent.jsonl  result.json
example/life_result/run/nodes/r3_pr2_pr1_pbaseline_0_1_0/: agent.jsonl  (+1 more)
example/life_result/run/repo/: README.md
skills/optimize/: SKILL.md
skills/optimize/references/: checklist.md  life-pattern.md
tests/: test_orchestrator.py
(+14 files in other folders)
